# kaval-clients

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mcp.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  publish-mcp-registry.yml  release.yml  version-bump.yml
benchmark/: README.md  eval-sample.json
fixtures/: mcp-audit-proof-packet-v1.json  mcp-gate-result-v1.json  mcp-verify-receipt-v1.json  node-audit-proof-packet.json  node-gate-proof-not-found.json  node-gate-result.json  node-verify-response.json  offer-search-result-v2.json  product-research-delivery-v1.json  product-research-result-v1.json
scripts/: bump.mjs  check-release-workflow.mjs
sdks/node/: LICENSE  README.md  package.json  tsconfig.build.json
sdks/node/src/: index.ts  offer-search.ts  product-research.ts  proof.ts
sdks/node/test/: client.test.ts  node18-smoke.mjs  offer-search.test.ts  product-research.test.ts  verification.test.ts
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: pydantic_ai_guardrail.py
sdks/python/kaval/: __init__.py  client.py  models.py  pydantic_ai.py
sdks/python/scripts/: check_dist.py
sdks/python/tests/: test_contract.py  test_live.py  test_product_research.py  test_pydantic_ai.py  test_pydantic_ai_agent.py
