[project]
name = "kaval"
version = "0.5.0"
description = "Python SDK for Kaval: verify the facts an AI agent's action relies on and enforce time-bounded signed proofs (ALLOW, REVIEW, BLOCK)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Lumaa, Inc. (dba Kaval)" }]
keywords = ["kaval", "ai", "agents", "evidence", "verification", "proofs", "freshness", "rag"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.27,<1", "typing-extensions>=4.8"]

[project.urls]
Homepage = "https://github.com/LufeMC/kaval-clients"
Repository = "https://github.com/LufeMC/kaval-clients"
Issues = "https://github.com/LufeMC/kaval-clients/issues"

[project.optional-dependencies]
dev = ["pytest>=8,<9"]
pydantic-ai = ["pydantic-ai>=1.44,<3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["/.venv*", "/.pytest_cache", "/dist", "/uv.lock"]

[tool.hatch.build.targets.wheel]
packages = ["kaval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.pyright]
include = ["kaval"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
